# airbender-zkpdf

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
airbender/prover/: blake2s_delegator_proof
pdf-utils-zkvm/: Cargo.toml
pdf-utils-zkvm/.cargo/: config.toml
pdf-utils-zkvm/core/: Cargo.toml
pdf-utils-zkvm/core/src/: lib.rs
pdf-utils-zkvm/extractor/: Cargo.toml
pdf-utils-zkvm/extractor/src/: font.rs  lib.rs  page.rs  parser.rs  stream.rs  text.rs  token.rs
pdf-utils-zkvm/logger/: Cargo.toml
pdf-utils-zkvm/logger/src/: lib.rs
pdf-utils-zkvm/signature-validator/: Cargo.toml
pdf-utils-zkvm/signature-validator/src/: lib.rs  logger.rs  pkcs7_reference.rs  rsa_rustcrypto.rs  signed_bytes_extractor.rs
pdf-utils-zkvm/simple-asn1-nostd/: Cargo.toml
pdf-utils-zkvm/simple-asn1-nostd/src/: lib.rs
pdf-zkvm-program/: Cargo.toml  README.md  build.sh  prepare_input.py  rust-toolchain
pdf-zkvm-program/.cargo/: config.toml
pdf-zkvm-program/src/: main.rs  uart_logger.rs
