[workspace]
members = [
    "signature-validator",
    "extractor",
    "core",
]

resolver = "2"

[workspace.dependencies]
# no_std alternatives
hashbrown = { version = "0.14", default-features = false }
der = { version = "0.7", default-features = false, features = ["alloc", "oid"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rsa = { version = "0.10.0-rc.0", default-features = false }
sha2 = { version = "0.11.0-rc.0", default-features = false }
sha1 = { version = "0.11.0-rc.0", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
rand_core = { version = "0.6", default-features = false }
crypto-bigint = { git = "https://github.com/hatemosphere/crypto-bigint-no-atomics", default-features = false, features = ["alloc"] }
signature = { version = "2.3.0-pre.4", default-features = false }
simple-asn1-nostd = { git = "https://github.com/hatemosphere/simple_asn1_risc_v", branch = "develop", default-features = false }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/hatemosphere/crypto-bigint-no-atomics" }