[package]
name = "simple-asn1-nostd"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-bigint = { workspace = true }
hex = { workspace = true }
hashbrown = { workspace = true }
pdf-logger = { path = "../logger" }

# Note: thiserror doesn't support no_std well, we'll replace with custom errors
# Note: time crate has limited no_std support, we'll handle dates differently if needed